--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.7.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-js-loader": "^0.1.3",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
