--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@google/generative-ai": "^0.11.3",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.18",
