--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "react-icons": "^5.2.1",
     "react-js-loader": "^0.1.3",
     "react-loader-spinner": "^6.1.6",
+    "react-modal": "^3.16.1",
+    "react-model": "^4.3.1",
     "react-notification-badge": "^1.5.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
