--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^5.2.1",
     "react-js-loader": "^0.1.3",
     "react-loader-spinner": "^6.1.6",
