--- a/frontend/package.json
+++ b/frontend/package.json
@@ -63,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "dotenv": "^16.4.5",
     "tailwindcss": "^3.4.3"
   }
